--- a/src/app/components/mainapp/editreceipt/editreceipt.component.css
+++ b/src/app/components/mainapp/editreceipt/editreceipt.component.css
@@ -112,6 +112,9 @@
     color: blue;
 }
 
+p.indent{ padding-left:3cm }
+p.indent-ten{ padding-left:10cm }
+
 input.ng-invalid.ng-touched {
   border: 1px solid red;
 }
